[gd_scene load_steps=4 format=3 uid="uid://w5mqdgtwwok1"]

[ext_resource type="Script" uid="uid://bb1jpntpm18rl" path="res://main_menu.gd" id="1_7vrkn"]
[ext_resource type="PackedScene" uid="uid://c3bewueyne4ju" path="res://interior_scene.tscn" id="2_7vrkn"]
[ext_resource type="AudioStream" uid="uid://c6fhcpefmirwb" path="res://assets/audio/sfx/enter_alt.wav" id="3_fu7sn"]

[node name="main menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vrkn")

[node name="InteriorScene" parent="." instance=ExtResource("2_7vrkn")]

[node name="leaderboard" type="Button" parent="."]
layout_mode = 0
offset_left = 792.0
offset_top = 312.0
offset_right = 1048.0
offset_bottom = 568.0
text = "Leaderboard"

[node name="rush" type="Button" parent="."]
layout_mode = 0
offset_left = 512.0
offset_top = 312.0
offset_right = 768.0
offset_bottom = 568.0
text = "Rush!"

[node name="relax" type="Button" parent="."]
layout_mode = 0
offset_left = 232.0
offset_top = 312.0
offset_right = 488.0
offset_bottom = 568.0
text = "Relax"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 440.0
offset_top = 72.0
offset_right = 840.0
offset_bottom = 272.0
theme_override_font_sizes/normal_font_size = 69
text = "ARCADE ICE CREAM
"
fit_content = true
horizontal_alignment = 1

[node name="sfx_menu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fu7sn")

[connection signal="pressed" from="rush" to="." method="_on_rush_pressed"]
[connection signal="pressed" from="relax" to="." method="_on_relax_pressed"]
